# newbellcoin

./: CONTRIBUTING.md  COPYING  Makefile.am  Makefile.in  README.md  SECURITY.md  aclocal.m4  autogen.sh  configure.ac  configure~  libbitcoinconsensus.pc.in
autom4te.cache/: output.3  output.4  requests  traces.0  traces.1  traces.2  traces.4
build_msvc/: .gitignore  README.md  bellscoin_config.h.in  bitcoin.sln  bitcoin_config.h.in  msvc-autogen.py  vcpkg.json
ci/: lint_imagefile  lint_run_all.sh  test_imagefile  test_run_all.sh
contrib/: README.md  filter-lcov.py  valgrind.supp
depends/: Makefile  README.md  description.md  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  bitcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  reduce-memory.md  reduce-traffic.md  release-notes-empty-template.md  release-process.md  shared-libraries.md  tor.md  (+4 more)
doc/man/: Makefile.am  Makefile.in  bellscoin-wallet.1  bitcoin-cli.1  bitcoin-qt.1  bitcoin-tx.1  bitcoin-util.1  bitcoind.1
share/: genbuild.sh  setup.nsi.in
src/: .clang-tidy  Makefile.am  Makefile.bench.include  Makefile.crc32c.include  Makefile.in  (+165 more)
(+1578 files in other folders)
