dist_man1_MANS=

if BUILD_BELLSCOIND
  dist_man1_MANS+=bellscoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=bellscoin-qt.1
endif

if BUILD_BELLSCOIN_CLI
  dist_man1_MANS+=bellscoin-cli.1
endif

if BUILD_BELLSCOIN_TX
  dist_man1_MANS+=bellscoin-tx.1
endif

if BUILD_BELLSCOIN_UTIL
  dist_man1_MANS+=bellscoin-util.1
endif

if ENABLE_WALLET
if BUILD_BELLSCOIN_WALLET
  dist_man1_MANS+=bellscoin-wallet.1
endif
endif
